@@ -4,6 +4,7 @@
 - Update Jackson to 2.17.1
 - Update Jersey to 3.1.7
 - Add support for HTTP/2 protocol to the client and server
+- Enable HTTP/2 support in the client by default
 
 248
 
